atualização do ex022 do fundo006

--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,7 +32,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sequi excepturi explicabo rerum ex pariatur exercitationem expedita ratione quibusdam, nobis perferendis aliquid facilis distinctio facere corporis cumque, hic, aspernatur enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit cumque delectus nisi provident mollitia eligendi laboriosam excepturi, praesentium quam! Repellendus nam et odio sint assumenda recusandae voluptatem nulla rem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, aut saepe iste provident placeat sed ratione perspiciatis. Provident praesentium deleniti, aperiam voluptatem voluptas voluptatibus facere temporibus consequuntur totam minus esse?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sequi excepturi explicabo rerum ex pariatur exercitationem expedita ratione quibusdam, nobis perferendis aliquid facilis distinctio facere corporis cumque, hic, aspernatur enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit cumque delectus nisi provident mollitia eligendi laboriosam excepturi, praesentium quam! Repellendus nam et odio sint assumenda recusandae voluptatem nulla rem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, aut saepe iste provident placeat sed ratione perspiciatis. Provident praesentium deleniti, aperiam voluptatem voluptas voluptatibus facere temporibus consequuntur totam minus esse? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, repudiandae voluptate! Veritatis accusamus, sunt ad quia eaque assumenda quas voluptas distinctio dolores quisquam magni sapiente facilis quasi quos ut dicta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid reiciendis sit consequuntur iste magni id temporibus sunt alias eaque dignissimos, minus nemo! Aliquid tempora, consequatur nobis magni animi explicabo dicta. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum minima nisi necessitatibus beatae laudantium aliquam sunt, ducimus, totam accusantium animi quidem excepturi non neque, error dolorem! Neque nam reiciendis reprehenderit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias quia eos nam, itaque fugit minus. Esse nam, quaerat nostrum ipsam molestiae nihil et explicabo ea ullam. Quidem laudantium earum doloremque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem eius, vel numquam nulla magnam quod vero repudiandae perspiciatis molestiae. Architecto similique sed reiciendis velit iste quod sit facilis deserunt voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis rem, doloribus repellat possimus nemo unde nihil ratione cum est beatae vero necessitatibus repellendus ad cupiditate? Neque numquam officia ducimus voluptates! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur reprehenderit nisi, fuga saepe expedita ipsa quis! Error nulla ullam magnam, eligendi tempore doloribus a, temporibus cumque quos ex quas molestiae! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit neque provident sunt quod voluptates, vero reprehenderit laboriosam dolore totam quibusdam. Temporibus consequuntur sapiente voluptas numquam, aperiam laborum tenetur quia consequatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis incidunt voluptas porro nulla rerum id deserunt aliquam cumque. Obcaecati fuga voluptatum provident veniam repellat fugiat doloribus quia possimus illo quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis vitae saepe harum exercitationem maxime eaque, aperiam voluptatum blanditiis aliquam nemo ducimus tenetur porro excepturi pariatur quia eveniet beatae similique. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio molestiae possimus, dolor saepe quos, blanditiis id ducimus quibusdam nobis enim est nisi magni et ipsam, voluptatem tempore quia laboriosam repellendus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero neque accusamus quas voluptatem id, beatae quod voluptas ipsum ipsa, doloribus exercitationem eius dolor ut debitis. Alias numquam mollitia vero assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptatem, repellendus pariatur odio animi doloremque consectetur, tenetur accusamus eum molestiae qui dolorem rerum sit in expedita assumenda nemo sapiente. Facilis?</p>
     </main>
 </body>
 </html>
