--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -13,6 +13,14 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
+        }
+
+        caption{
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
         }
 
         td, th{
@@ -20,9 +28,19 @@
             padding: 10px;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
+
         thead{
             background-color: gray;
             color: white;
+        }
+
+        tbody > tr:nth-child(2n) {
+            background-color: lightgray;
         }
 
         td.num{
@@ -35,6 +53,7 @@
     <!--
         Anatomias para tabelas grandes
         table
+           CAPTION
            THEAD
               tr, td, th
            TBODY
@@ -43,10 +62,11 @@
               tr, td, th
     -->
     <table>
+        <caption>População das unidades federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>população</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 100px;">população</th>
             </tr>
         </thead>
         <tbody>
@@ -65,8 +85,8 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
-                <td><strong>0000</strong></td>
+                <th scope="row">Total de Habitantes</th>
+                <td class="num"><strong>0000</strong></td>
             </tr>
         </tfoot>
 </body>
