--- a/Exercicios/ex024/iframe003.html
+++ b/Exercicios/ex024/iframe003.html
@@ -31,7 +31,7 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde porro dolor tenetur sit voluptates maiores facilis! In ex possimus libero non repellat! Ipsam nesciunt amet ad minus, incidunt molestiae eius.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1>">
         Infelizmente seu navegador não é compativel
     </iframe>
 
